...
fun InvitationScreenPreview() {
    OSTheme {
        InvitationScreen(
            onBackClick = {},
            onShareInvitationClick = {},
            contactName = "John Doe",
            invitationLink = "https://onesafe.com/invitation/123456",
            onFinishClick = {},
        )
    }
}

